--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DnfAssistant</string>
+    <string name="app_name">FarmKing</string>
     <string name="create_floating_widget_text">Create Floating Widget</string>
     <string name="main_icon">main icon</string>
     <string name="start_the_activity">start the activity</string>
